-Forgot password? button works! -Minor clientside fixes: removed duplicate control rules socket emits only when there is socket

--- a/404.html
+++ b/404.html
@@ -1,1 +1,5 @@
-ERROR 404: NOT FOUND
+<meta charset="utf-8" />
+<span style="font-size: 5em"><b>Ощуть себя нечтым, Ылчняг.</b>
+<hr>
+<b>404 ;(</b>
+</span>
