--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="utf-8" />
@@ -20,7 +21,7 @@
                 <input id="formPass" maxlength="10" type="password" placeholder="Password..." class="forms" />
                 <input id="btnConnect" type="button" value="Connect" onclick="netLogin()" class="forms" />
                 <input id="btnRegister" type="button" value="Register" onclick="register()" class="forms" />
-                <input id="btnForgot" type="button" value="Forgot password?" disabled style="opacity: 0.5" class="forms" />
+                <input id="btnForgot" type="button" value="Forgot password?" onclick="forgot()" class="forms" />
             </form>                
         </div>
         
