Sprite animations are now controlled. NOT with JSON sadly (

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                     <option value="9">Knuckles</option>
                     <option value="10">Tails</option>
                     <option value="11">Amy</option>
+                    <option value="12">Metal Sonic</option>
+                    <option value="13">Emerl</option>
+                    <option value="14">Gemerl</option>
+                    <option value="15">Marine</option>
                 </select>
                 <input id="btnSignup" type="button" value="Signup" onclick="netSignup()" class="forms" />
                 <input id="btnLogin" type="button" value="Cancel" onclick="login()" class="forms" />
