Sprite quick fix More sprites

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                     <option value="13">Emerl</option>
                     <option value="14">Gemerl</option>
                     <option value="15">Marine</option>
+                    <option value="16">Mighty</option>
+                    <option value="17">Ray</option>
+                    <option value="18">Honey</option>
+                    <option value="19">Sally</option>
+                    <option value="20">Tikal</option>
+                    <option value="21">Metal Knuckles</option>
                 </select>
                 <input id="btnSignup" type="button" value="Signup" onclick="netSignup()" class="forms" />
                 <input id="btnLogin" type="button" value="Cancel" onclick="login()" class="forms" />
