--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Server</title>
+        <title>DON'T TELL A SOUL BUT I WORKED FOR THE SANDMAN</title>
         <link rel="shortcut icon" href="../assets/i/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
         <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
