+Minimal debug +Animation fixes -MOTD not spammed when other players log in +Boss's projectiles are wider +Boss talks once an hour instead of 10 minutes
-Animation bugs
-Newly connected players don't see the ones that already ingame unless they move

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             Players online: <span id="userCount"></span> |
             Sound:<input id="optionsSound" type="checkbox" checked></input> |
             Music:<input id="optionsMusic" type="checkbox" onclick="toggleMusic()"></input> |
+            Debug:<input id="optionsDebug" type="checkbox" ></input> |
             <input type="button" id="toogleChat" value="Toogle chat" onclick="toggleChat()"></input>
         </div>
 
